feat: common component

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,3 +1,6 @@
-.container{
+@import "~taro-ui/dist/style/components/tab-bar.scss";
+@import "~taro-ui/dist/style/components/badge.scss";
+
+.home-container{
   background-color: #E0D0C2;
 }
