--- a/src/assets/dd/iconfont.css
+++ b/src/assets/dd/iconfont.css
@@ -7,7 +7,7 @@
 
 .dd {
   font-family: "iconfont" !important;
-  font-size: 16px;
+  font-size: 16PX;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
