--- a/src/components/HexagramWrapper/index.scss
+++ b/src/components/HexagramWrapper/index.scss
@@ -1,5 +1,5 @@
 .hexagram-wrapper {
-  padding: 20px;
+  padding: 20px 20px 6px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
