--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,20 +1,74 @@
-.container {
+$hexagramsMargin: 40px;
+$hexagramsHeight: 375px;
+
+.home-container {
   background-color: #E0D0C2;
   height: 100%;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
   .at-search-bar {
     background-color: transparent;
     padding: 0;
   }
   .hexagrams-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    height: 700px;
+    padding-bottom: $hexagramsMargin;
+    height: $hexagramsHeight + $hexagramsMargin;
     width: 100%;
-    > * {
-      width: 20%;
+    position: relative;
+    .hexagrams-items {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      > .hexagram-wrapper {
+        width: 26%;
+        //width: 100px;
+        margin-top: $hexagramsMargin;
+      }
+    }
+
+    .trigram-detail {
+      width: 100%;
+      height: 100%;
       margin-top: 40px;
+      border-radius: 10px;
+      background-color: rgba(255, 255, 255, 0.5);
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    }
+  }
+
+  .hexagrams-items {
+    flex: 1;
+  }
+}
+
+.card-wrapper {
+  background-color: #CBBBAE;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  font-size: 16px;
+  padding: 15px 18px;
+  display: flex;
+  justify-content: space-between;
+  .card-detail {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    //white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  }
+  .card-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 20px;
+    color: #000;
+    .btn-detail {
+      font-size: 12px;
+      color: #4F7C9E;
     }
   }
 }
